# g1_policy_deployment_ws

./: README.md
isaacsim_envs/: README.md  g1_controller_ros_standalone.py  g1_policy_standalone.py  g1_robot_standalone.py
src/g1_fullbody_controller/: package.xml  setup.cfg  setup.py
src/g1_fullbody_controller/g1_fullbody_controller/: g1_policy_controller.py
src/g1_fullbody_controller/launch/: g1_policy_controller.launch.py
